--- a/ex_animations.ipynb
+++ b/ex_animations.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -465,14 +465,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.032905399799346924\n"
+      "0.028870848814646403\n"
      ]
     }
    ],
@@ -635,14 +635,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.004548283418019613\n"
+      "0.00431286891301473\n"
      ]
     }
    ],
@@ -750,14 +750,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4.145379646619161\n"
+      "0.000994582970937093\n"
      ]
     }
    ],
@@ -801,8 +801,8 @@
     "\n",
     "ax.legend(loc=\"lower left\")\n",
     "ax.set_aspect(\"equal\")\n",
-    "ax.set_xlim(-5,2)\n",
-    "ax.set_ylim(ylim)\n",
+    "ax.set_xlim(-3,2)\n",
+    "ax.set_ylim(-3,2)\n",
     "ax.set_xlabel(\"X (au)\")\n",
     "ax.set_ylabel(\"Y (au)\")\n",
     "\n",
@@ -937,14 +937,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.0026746471722920735\n"
+      "0.002509148915608724\n"
      ]
     }
    ],
